# py-eawrc-sdk

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/eawrcsdk/: eawrcsdk.py
